--- a/PageReplacementAlgos/lru.html
+++ b/PageReplacementAlgos/lru.html
@@ -254,10 +254,10 @@
         location.reload();
     }
     function disableButton() {
-        document.getElementById("visualise-button").disabled = true;
+        document.getElementById("visualize-button").disabled = true;
     }
     function enableButton() {
-        document.getElementById("visualise-button").disabled = false;
+        document.getElementById("visualize-button").disabled = false;
     }
     function showDiv() {
         document.getElementById('SUM').style.display = "block";
