--- a/disk_scheduling/clook.html
+++ b/disk_scheduling/clook.html
@@ -118,7 +118,7 @@
         </fieldset>
       </form>
       <button type="submit" id="plot-button" class="btn btn-primary" onclick="getBitStreamAndPlot(event, document.getElementById('bitstream-input').value, document.getElementById('initial-input').value, document.getElementById('final-input').value, document.getElementById('algorithm').value,document.getElementById('direction').value)"><a href="#grph" style="color: white; text-decoration: none;">&nbsp;Plot&nbsp;</a></button>
-      <button type="submit" id="animate-button" class="btn btn-primary">Animate</button>
+      <!-- <button type="submit" id="animate-button" class="btn btn-primary">Animate</button> -->
       <button type="submit" id="cmpr-button" class="btn btn-primary" onclick="cmprPlot(event, document.getElementById('bitstream-input').value, document.getElementById('initial-input').value, document.getElementById('final-input').value, document.getElementById('direction').value)"><a href="#cmpr" style="color: white; text-decoration: none;">&nbsp;Compare&nbsp;</a></button>
      
     </div>
