--- a/PageReplacementAlgos/optimal.html
+++ b/PageReplacementAlgos/optimal.html
@@ -63,10 +63,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto me-4">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="./pageReplacementAlgos.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">About</a>
+                        <a class="nav-link active" href="../about/about.html">About</a>
                     </li>
                 </ul>
             </div>
