--- a/process_sync/process_sync_home.html
+++ b/process_sync/process_sync_home.html
@@ -72,12 +72,14 @@
             The main objective of process synchronization is to ensure that multiple processes access shared resources without
             interfering with each other and to prevent the possibility of inconsistent data due to concurrent access. To 
             achieve this, various synchronization techniques such as semaphores, monitors, and critical sections are used.We
-            will look at three classical problems for process synchronisation.They are:
+            will look at three classical problems for process synchronisation.
+            <br>
+            They are:
+            <br>
             1.Producer consumer problem
             <br>
             2.Reader Writer problem
             <br>
-            3.Dining philosophers problem
           </p>
           </div>
           <div class="simulator-box">
